src/test/resources/testinput/parsable/symtab/invalid_coco/comparisons.ocl
/* (c) https://github.com/MontiCore/monticore */
package invariants;

ocl comparisons {
  inv(int a, int b):
    a > b &&
    a >= b &&
    a < b &&
    a <= b &&
    a == b &&
    a != b;

  inv(Integer a, Integer b):
    a > b &&
    a >= b &&
    a < b &&
    a <= b &&
    a == b &&
    a != b;
}
